--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="ext/servlet-api-2.4.jar"/>
 	<classpathentry kind="lib" path="ext/slf4j-api-1.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_03/lib/tools.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
