Some more refactoring, including moving around the classes in the h2o.comms package, putting them in more sensible places.
Added replication propagation to: insert, update, delete, create table, drop table.

Added a new autonomic package. Currently only contains a REPLICATION factor constant.

Added tests for the new replication propagation classes.

--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,9 @@
 	<classpathentry kind="lib" path="ext/org.osgi.core-1.2.0.jar"/>
 	<classpathentry kind="lib" path="ext/servlet-api-2.4.jar"/>
 	<classpathentry kind="lib" path="ext/slf4j-api-1.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_03/lib/tools.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_16/lib/tools.jar"/>
+	<classpathentry kind="lib" path="ext/nds.jar"/>
+	<classpathentry kind="lib" path="C:/Users/angus/workspace/org.eclipse.jdt.junit_3.5.0.v20090526-2000.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/eclipse/junit-4.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
