--- a/.classpath
+++ b/.classpath
@@ -4,15 +4,20 @@
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/tools"/>
 	<classpathentry kind="lib" path="service/wrapper.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ext/lucene-core-2.2.0.jar"/>
 	<classpathentry kind="lib" path="ext/org.osgi.core-1.2.0.jar"/>
 	<classpathentry kind="lib" path="ext/servlet-api-2.4.jar"/>
 	<classpathentry kind="lib" path="ext/slf4j-api-1.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_16/lib/tools.jar"/>
 	<classpathentry kind="lib" path="C:/Users/angus/workspace/org.eclipse.jdt.junit_3.5.0.v20090526-2000.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/eclipse/junit-4.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/nds"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/stachordRMI"/>
+	<classpathentry kind="lib" path="/nds/lib/mindterm.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.appgate.com/products/80_MindTerm/80_API_Documentation/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
