--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/stachordRMI"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_21/lib/tools.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/stachord"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
