--- a/src/main/org/h2o/defaults.properties
+++ b/src/main/org/h2o/defaults.properties
@@ -1,2 +1,6 @@
+
+AsynchronousQueryCheckerThread.SLEEP_TIME_BETWEEN_ASYNC_QUERY_CHECK=100
+AsynchronousQueryExecutor.SLEEP_TIME_WAITING_FOR_QUERIES_TO_COMPLETE=30
+H2OEvent.KEEP_ALIVE_MESSAGE_SLEEP_TIME=15000
 PersistentSystemTable.DEFAULT_PASSWORD=
 PersistentSystemTable.DEFAULT_USERNAME=sa
