Fixed sleep times to improve query throughput.

--- a/src/main/org/h2o/defaults.properties
+++ b/src/main/org/h2o/defaults.properties
@@ -1,6 +1,5 @@
 
-AsynchronousQueryCheckerThread.SLEEP_TIME_BETWEEN_ASYNC_QUERY_CHECK=100
-AsynchronousQueryExecutor.SLEEP_TIME_WAITING_FOR_QUERIES_TO_COMPLETE=30
-H2OEvent.KEEP_ALIVE_MESSAGE_SLEEP_TIME=15000
+AsynchronousQueryCheckerThread.SLEEP_TIME_BETWEEN_ASYNC_QUERY_CHECK=50
+AsynchronousQueryExecutor.SLEEP_TIME_WAITING_FOR_QUERIES_TO_COMPLETE=0 #Slows down a lot if its anything but 0. Most transactions complete very quickly.
 PersistentSystemTable.DEFAULT_PASSWORD=
 PersistentSystemTable.DEFAULT_USERNAME=sa
