--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sun Sep 19 20:36:25 IST 2010
+#Wed Nov 17 18:06:58 GMT 2010
 eclipse.preferences.version=1
 encoding//src/main/org/h2o/H2O.java=UTF-8
+encoding//src/main/org/h2o/H2OCommon.java=UTF-8
 encoding//src/main/org/h2o/H2OLocator.java=UTF-8
