--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Thu Oct 21 16:34:25 IST 2010
+#Fri Nov 19 15:15:19 GMT 2010
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=false
@@ -54,7 +54,7 @@ cleanup_profile=_StAndrews-CleanUp
 cleanup_settings_version=2
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
-formatter_profile=_StAndrews-Format
+formatter_profile=_Unmanaged profile 'StAndrews-Format'-2
 formatter_settings_version=11
 sp_cleanup.add_default_serial_version_id=true
 sp_cleanup.add_generated_serial_version_id=false
