--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/stachord"/>
+	<classpathentry kind="lib" path="/nds/lib/json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
