--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/stachord"/>
 	<classpathentry kind="lib" path="/nds/lib/json.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_21/lib/tools.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/numonic"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
