Thresholds now work with FileSystem Data.

--- a/default_numonic_thresholds.properties
+++ b/default_numonic_thresholds.properties
@@ -1,4 +1,4 @@
-cpu_user_total=0.5d, false
+cpu_user_total=0.5d, true
 cpu_sys_total=ignore
 cpu_idle_total=ignore
 cpu_wait_total=ignore
@@ -7,3 +7,11 @@ memory_used=ignore
 memory_free=ignore
 swap_used=ignore
 swap_free=ignore
+fs_space_used=ignore
+fs_space_free=190374483, false
+fs_size=ignore
+fs_disk_reads=ignore
+fs_number_of_files=ignore
+fs_bytes_read=ignore
+fs_disk_writes=ignore
+fs_bytes_written=ignore
