Fixed JSON bug for the 1,000,000th time.

--- a/default_numonic_thresholds.properties
+++ b/default_numonic_thresholds.properties
@@ -8,7 +8,7 @@ memory_free=ignore
 swap_used=ignore
 swap_free=ignore
 fs_space_used=ignore
-fs_space_free=190374483, false
+fs_space_free=ignore
 fs_size=ignore
 fs_disk_reads=ignore
 fs_number_of_files=ignore
