--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/stachord"/>
 	<classpathentry kind="lib" path="/nds/lib/json.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_21/lib/tools.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/numonic"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/numonic-main"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
