--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>h2o</name>
+	<name>h2o-working</name>
 	<comment></comment>
 	<projects>
 		<project>nds</project>
